# hexchat

./: .travis.yml  meson.build  meson_options.txt
data/: meson.build
data/misc/: meson.build
plugins/: meson.build
plugins/lua/: meson.build
plugins/perl/: meson.build
plugins/python/: meson.build
src/: meson.build
