option('with-dbus', type: 'boolean')
option('with-ssl', type: 'boolean')
option('with-plugin', type: 'boolean')
option('with-libproxy', type: 'boolean')
option('with-libnotify', type: 'boolean')
option('with-libcanberra', type: 'boolean')
option('with-gtk', type: 'boolean')
option('with-text', type: 'boolean', value: false)
option('with-theme-manager', type: 'boolean', value: false)

# Plugins
option('with-checksum', type: 'boolean')
option('with-exec', type: 'boolean')
option('with-fishlim', type: 'boolean')
option('with-lua', type: 'combo', choices: ['luajit', 'lua', 'false'])
option('with-mpcinfo', type: 'boolean')
option('with-perl', type: 'boolean')
option('with-python', type: 'combo', choices: ['3', '2', 'false'], value: '3')
option('with-sysinfo', type: 'boolean')
option('with-upd', type: 'boolean')
option('with-winamp', type: 'boolean')
